force-app/main/default/objects/CsoKnockouts__c/CsoKnockouts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CsoKnockouts</label>
</CustomObject>