force-app/main/default/objects/CsoKnockouts__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FieldValue</label>
    <length>40</length>
    <type>Text</type>
</CustomField>