force-app/main/default/objects/CsoKnockouts__c/fields/NotNull__c.field-meta.xml
<CustomField>
    <fullName>NotNull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotNull</label>
    <type>Checkbox</type>
</CustomField>