force-app/main/default/objects/CsoKnockouts__c/fields/Product_Knockout__c.field-meta.xml
<CustomField>
    <fullName>Product_Knockout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Knockout</label>
    <type>Checkbox</type>
</CustomField>